# ctx-cli

./: .gitignore  LICENSE  README.md  __init__.py  agent.py  ctx_cli.py  ctx_store.py  demo.py  policies.py  prompts.py  pyproject.toml  tokens.py
benchmarks/: .gitignore  HARNESS_SETUP.md  README.md  predictions_lite.json  run.py  run_internal.py  run_locomo_semantic.py  run_locomo_style.py  run_swe_bench_lite.py  run_swe_cl.py  run_swe_cl_real.py
demos/: __init__.py  demo_code_review.py  demo_comparison.py  demo_debugging.py  demo_error_recovery.py  demo_interactive.py  demo_knowledge_retention.py  demo_long_coding_task.py  demo_long_task.py  demo_multi_project.py  demo_multitask_tools.py  demo_pair_programming.py  demo_planning.py  demo_policies.py  demo_research.py  demo_semantic_planning.py  demo_token_savings.py
paper/: 00-abstract.md  01-introduction.md  02-related-work.md  03-method.md  04-experiments.md  05-results.md  06-discussion.md  07-conclusion.md  README.md  compile.sh  references.md
paper/figures/: fig1_architecture.md  fig2_attention_mask.md  fig3_token_growth.md  fig4_workflow.md  fig5_comparison_table.md  generate_plots.py
scripts/: convert_to_predictions.py  generate_plots.py
tests/: __init__.py  test_ctx_cli.py
